--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Express + Browserify.</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <main role="main"></main>
+
+<button id="reRender">New render</button>
 
 <script src="app.js"></script>
 </body>
